--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -169,6 +169,7 @@ $container-max-widths: (
 //$font-family-monospace:  Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace !default;
 $font-family-work-sans-thin:  'worksans-thin', sans-serif;
 $font-family-work-sans-light:  'worksans-light', sans-serif;
+$font-family-work-sans-regular:  'worksans-regular', sans-serif;
 $font-family-she-always-walks-alone:  'she-always-walks-alone', serif;
 $font-family-base:       $font-family-work-sans-light;
 //
