--- a/src/scss/sections/_common.scss
+++ b/src/scss/sections/_common.scss
@@ -73,6 +73,16 @@
 
 ///////////////////  Fonts  ///////////////////
 
+
+@font-face {
+  font-family: 'she-always-walks-alone';
+  src:  url('/fonts/she-always-walks-alone.woff2') format('woff2'),
+  url('/fonts/she-always-walks-alone.woff') format('woff'),
+  url('/fonts/she-always-walks-alone.ttf') format('truetype');
+  font-weight: normal;
+  font-style: normal;
+}
+
 @font-face {
   font-family: 'worksans-thin';
   src:  url('/fonts/worksans-thin.woff2') format('woff2'),
@@ -92,14 +102,11 @@
 }
 
 @font-face {
-  font-family: 'she-always-walks-alone';
-  src:  url('/fonts/she-always-walks-alone.woff2') format('woff2'),
-        url('/fonts/she-always-walks-alone.woff') format('woff'),
-        url('/fonts/she-always-walks-alone.ttf') format('truetype');
+  font-family: 'worksans-regular';
+  src:  url('/fonts/WorkSans-Regular.ttf') format('truetype');
   font-weight: normal;
   font-style: normal;
 }
-
 
 
 ///////////////////  Base  ///////////////////
@@ -520,4 +527,10 @@ h3, .h3 {
   width: 15px;
   border-radius: 50%;
   margin: 0;
+}
+
+.arrow-down {
+  transform: rotate(-90deg);
+  font-size: 7rem;
+  font-family: $font-family-work-sans-thin;
 }
