Overall styles fixes

--- a/src/scss/sections/_common.scss
+++ b/src/scss/sections/_common.scss
@@ -20,24 +20,16 @@
   padding: 3px 8px;
   background: transparent;
   cursor: pointer;
-  font-size: 1.2rem;
-  text-transform: uppercase;
-  color: #8c8c8c;
-  &:after {
-    content: ' >';
-    position: relative;
-    color: #8c8c8c;
-  }
+  font-size: 1.5rem;
+  letter-spacing: -0.1rem;
+  font-family: $font-family-work-sans-regular;
+  text-decoration: underline;
+
   &:hover,
-  &.hover,
   &:focus,
-  &.focus,
-  &:active,
-  &.active,
   &:active {
-    color: $brand-primary;
+    color: #8c8c8c;
     text-decoration: underline;
-    outline: 0;
   }
 }
 
@@ -77,8 +69,8 @@
 @font-face {
   font-family: 'she-always-walks-alone';
   src:  url('/fonts/she-always-walks-alone.woff2') format('woff2'),
-  url('/fonts/she-always-walks-alone.woff') format('woff'),
-  url('/fonts/she-always-walks-alone.ttf') format('truetype');
+        url('/fonts/she-always-walks-alone.woff') format('woff'),
+        url('/fonts/she-always-walks-alone.ttf') format('truetype');
   font-weight: normal;
   font-style: normal;
 }
@@ -141,7 +133,7 @@ h2, .h2 {
 
 h3, .h3 {
   font-family: $font-family-work-sans-light;
-  font-size: 1.6rem;
+  font-size: 1.5rem;
   line-height: 1.2;
 }
 
@@ -341,7 +333,7 @@ h3, .h3 {
   @extend %side-bar__nav-button;
   @include media-breakpoint-up(md) {
     top: 17.7rem;
-    left: 1.6rem;
+    left: 1.5rem;
   }
   @include media-breakpoint-down(sm) {
     top: 228px;
@@ -513,7 +505,7 @@ h3, .h3 {
 }
 
 .carousel-indicators li {
-  border: 1px solid #666;
+  border: 1px solid #000;
   height: 15px;
   width: 15px;
   border-radius: 50%;
@@ -521,8 +513,8 @@ h3, .h3 {
 }
 
 .carousel-indicators .active {
-  border: 1px solid #666;
-  background-color: #666;
+  border: 1px solid #000;
+  background-color: #000;
   height: 15px;
   width: 15px;
   border-radius: 50%;
@@ -531,6 +523,7 @@ h3, .h3 {
 
 .arrow-down {
   transform: rotate(-90deg);
-  font-size: 7rem;
+  font-size: 5rem;
   font-family: $font-family-work-sans-thin;
+  opacity: 0.5;
 }
