--- a/public/css/main.css
+++ b/public/css/main.css
@@ -4844,7 +4844,7 @@ h2, .h2 {
 
 h3, .h3 {
   font-family: "worksans-light", sans-serif;
-  font-size: 1.6rem;
+  font-size: 1.5rem;
   line-height: 1.2; }
 
 .separator {
@@ -4919,34 +4919,26 @@ h3, .h3 {
   padding: 3px 8px;
   background: transparent;
   cursor: pointer;
-  font-size: 1.2rem;
-  text-transform: uppercase;
-  color: #8c8c8c; }
-  .footer__nav__button:after {
-    content: ' >';
-    position: relative;
-    color: #8c8c8c; }
-  .footer__nav__button:hover, .footer__nav__button.hover, .footer__nav__button:focus, .footer__nav__button.focus, .footer__nav__button:active, .footer__nav__button.active, .footer__nav__button:active {
-    color: #000;
-    text-decoration: underline;
-    outline: 0; }
+  font-size: 1.5rem;
+  letter-spacing: -0.1rem;
+  font-family: "worksans-regular", sans-serif;
+  text-decoration: underline; }
+  .footer__nav__button:hover, .footer__nav__button:focus, .footer__nav__button:active {
+    color: #8c8c8c;
+    text-decoration: underline; }
 
 .article-header__nav__button {
   border: 0;
   padding: 3px 8px;
   background: transparent;
   cursor: pointer;
-  font-size: 1.2rem;
-  text-transform: uppercase;
-  color: #8c8c8c; }
-  .article-header__nav__button:after {
-    content: ' >';
-    position: relative;
-    color: #8c8c8c; }
-  .article-header__nav__button:hover, .article-header__nav__button.hover, .article-header__nav__button:focus, .article-header__nav__button.focus, .article-header__nav__button:active, .article-header__nav__button.active, .article-header__nav__button:active {
-    color: #000;
-    text-decoration: underline;
-    outline: 0; }
+  font-size: 1.5rem;
+  letter-spacing: -0.1rem;
+  font-family: "worksans-regular", sans-serif;
+  text-decoration: underline; }
+  .article-header__nav__button:hover, .article-header__nav__button:focus, .article-header__nav__button:active {
+    color: #8c8c8c;
+    text-decoration: underline; }
 
 @media (max-width: 800px) {
   .side-bar {
@@ -4992,17 +4984,13 @@ h3, .h3 {
   padding: 3px 8px;
   background: transparent;
   cursor: pointer;
-  font-size: 1.2rem;
-  text-transform: uppercase;
-  color: #8c8c8c; }
-  .side-bar__nav__button--portfolio:after, .side-bar__nav__button--skills:after, .side-bar__nav__button--experience:after, .side-bar__nav__button--contact:after, .side-bar__nav__button--resume:after, .side-bar__nav__button--code:after {
-    content: ' >';
-    position: relative;
-    color: #8c8c8c; }
-  .side-bar__nav__button--portfolio:hover, .side-bar__nav__button--skills:hover, .side-bar__nav__button--experience:hover, .side-bar__nav__button--contact:hover, .side-bar__nav__button--resume:hover, .side-bar__nav__button--code:hover, .hover.side-bar__nav__button--portfolio, .hover.side-bar__nav__button--skills, .hover.side-bar__nav__button--experience, .hover.side-bar__nav__button--contact, .hover.side-bar__nav__button--resume, .hover.side-bar__nav__button--code, .side-bar__nav__button--portfolio:focus, .side-bar__nav__button--skills:focus, .side-bar__nav__button--experience:focus, .side-bar__nav__button--contact:focus, .side-bar__nav__button--resume:focus, .side-bar__nav__button--code:focus, .focus.side-bar__nav__button--portfolio, .focus.side-bar__nav__button--skills, .focus.side-bar__nav__button--experience, .focus.side-bar__nav__button--contact, .focus.side-bar__nav__button--resume, .focus.side-bar__nav__button--code, .side-bar__nav__button--portfolio:active, .side-bar__nav__button--skills:active, .side-bar__nav__button--experience:active, .side-bar__nav__button--contact:active, .side-bar__nav__button--resume:active, .side-bar__nav__button--code:active, .active.side-bar__nav__button--portfolio, .active.side-bar__nav__button--skills, .active.side-bar__nav__button--experience, .active.side-bar__nav__button--contact, .active.side-bar__nav__button--resume, .active.side-bar__nav__button--code, .side-bar__nav__button--portfolio:active, .side-bar__nav__button--skills:active, .side-bar__nav__button--experience:active, .side-bar__nav__button--contact:active, .side-bar__nav__button--resume:active, .side-bar__nav__button--code:active {
-    color: #000;
-    text-decoration: underline;
-    outline: 0; }
+  font-size: 1.5rem;
+  letter-spacing: -0.1rem;
+  font-family: "worksans-regular", sans-serif;
+  text-decoration: underline; }
+  .side-bar__nav__button--portfolio:hover, .side-bar__nav__button--skills:hover, .side-bar__nav__button--experience:hover, .side-bar__nav__button--contact:hover, .side-bar__nav__button--resume:hover, .side-bar__nav__button--code:hover, .side-bar__nav__button--portfolio:focus, .side-bar__nav__button--skills:focus, .side-bar__nav__button--experience:focus, .side-bar__nav__button--contact:focus, .side-bar__nav__button--resume:focus, .side-bar__nav__button--code:focus, .side-bar__nav__button--portfolio:active, .side-bar__nav__button--skills:active, .side-bar__nav__button--experience:active, .side-bar__nav__button--contact:active, .side-bar__nav__button--resume:active, .side-bar__nav__button--code:active {
+    color: #8c8c8c;
+    text-decoration: underline; }
 
 @media (min-width: 801px) {
   .side-bar__nav__button--portfolio {
@@ -5037,7 +5025,7 @@ h3, .h3 {
 @media (min-width: 801px) {
   .side-bar__nav__button--contact {
     top: 17.7rem;
-    left: 1.6rem; } }
+    left: 1.5rem; } }
 
 @media (max-width: 800px) {
   .side-bar__nav__button--contact {
@@ -5184,15 +5172,15 @@ h3, .h3 {
   margin: 0; }
 
 .carousel-indicators li {
-  border: 1px solid #666;
+  border: 1px solid #000;
   height: 15px;
   width: 15px;
   border-radius: 50%;
   margin: 0; }
 
 .carousel-indicators .active {
-  border: 1px solid #666;
-  background-color: #666;
+  border: 1px solid #000;
+  background-color: #000;
   height: 15px;
   width: 15px;
   border-radius: 50%;
@@ -5200,14 +5188,15 @@ h3, .h3 {
 
 .arrow-down {
   transform: rotate(-90deg);
-  font-size: 7rem;
-  font-family: "worksans-thin", sans-serif; }
+  font-size: 5rem;
+  font-family: "worksans-thin", sans-serif;
+  opacity: 0.5; }
 
 #intro .section-header {
   width: 50%; }
 
 #intro .intro-message {
-  font-size: 1.8rem;
+  font-size: 1.5rem;
   margin-bottom: 100px; }
 
 #intro .section-header-img-wrapper {
@@ -5280,7 +5269,7 @@ h3, .h3 {
   position: absolute;
   left: 0;
   top: 0;
-  opacity: 0.5; }
+  opacity: 0.6; }
 
 #skills.cogwheel-rotating .cogwheel {
   animation: rotating 60s linear infinite; }
@@ -5308,7 +5297,7 @@ h3, .h3 {
   top: 50%;
   left: 45%;
   text-align: center;
-  font-size: 1.6rem;
+  font-size: 1.5rem;
   line-height: 1.3; }
 
 #skills .skills-group-javascript {
@@ -5362,9 +5351,8 @@ h3, .h3 {
     max-width: 300px; }
   #portfolio .section-header {
     position: absolute;
-    top: 50vh;
-    left: 0;
-    transform: translateY(-50%); }
+    top: calc(50vh - 273px);
+    left: 0; }
   #portfolio.portfolio-item--open .section-header {
     display: none; }
   #portfolio.scrolling-this .section-header {
@@ -5372,8 +5360,7 @@ h3, .h3 {
   #portfolio.scrolled-this .section-header {
     position: absolute;
     top: auto;
-    bottom: 50vh;
-    transform: translateY(50%); }
+    bottom: calc(50vh - 273px); }
   #portfolio .article-body {
     width: 75%;
     margin-left: 25%; }
@@ -5423,17 +5410,17 @@ h3, .h3 {
     font-size: 1.8rem;
     font-family: "worksans-light", sans-serif; }
   #portfolio .portfolio-item-subtitle-employer {
-    font-size: 1.6rem;
+    font-size: 1.5rem;
     margin: 2rem 0 0; }
   #portfolio .portfolio-item-subtitle,
   #portfolio .portfolio-item-content-employer,
   #portfolio .portfolio-item-content-contribution {
     margin: 0;
-    font-size: 1.6rem;
+    font-size: 1.5rem;
     line-height: 1.3; }
   #portfolio .portfolio-item-subtitle-contribution {
     margin: 1rem 0 0;
-    font-size: 1.6rem; }
+    font-size: 1.5rem; }
   #portfolio .portfolio-item-title-wrapper-horizontal {
     display: none;
     text-align: center;
@@ -5467,7 +5454,7 @@ h3, .h3 {
   #portfolio .portfolio-item-tv2:hover ~ .portfolio-item-title-wrapper-horizontal {
     display: block; }
   #portfolio .project-type-label {
-    font-size: 1.6rem;
+    font-size: 1.5rem;
     position: absolute;
     top: -2.4rem;
     left: 4.2%; }
@@ -5598,11 +5585,11 @@ h3, .h3 {
     top: 50%;
     left: 22%; }
   #portfolio .portfolio-item-vendomo-crm .portfolio-item-notebook, #portfolio .portfolio-item-vendomo-crm .portfolio-item-unicri .portfolio-item-notebook-ande, #portfolio .portfolio-item-unicri .portfolio-item-vendomo-crm .portfolio-item-notebook-ande, #portfolio .portfolio-item-vendomo-crm .portfolio-item-unicri .portfolio-item-notebook-eusec, #portfolio .portfolio-item-unicri .portfolio-item-vendomo-crm .portfolio-item-notebook-eusec, #portfolio .portfolio-item-vendomo-crm .portfolio-item-unicri .portfolio-item-notebook-cbrn, #portfolio .portfolio-item-unicri .portfolio-item-vendomo-crm .portfolio-item-notebook-cbrn, #portfolio .portfolio-item-vendomo-crm .portfolio-item-unicri .portfolio-item-notebook-ipo, #portfolio .portfolio-item-unicri .portfolio-item-vendomo-crm .portfolio-item-notebook-ipo, #portfolio .portfolio-item-vendomo-crm .portfolio-item-unicri .portfolio-item-notebook-lab, #portfolio .portfolio-item-unicri .portfolio-item-vendomo-crm .portfolio-item-notebook-lab, #portfolio .portfolio-item-vendomo-crm .portfolio-item-others .portfolio-item-notebook-school, #portfolio .portfolio-item-others .portfolio-item-vendomo-crm .portfolio-item-notebook-school, #portfolio .portfolio-item-vendomo-crm .portfolio-item-others .portfolio-item-notebook-davide, #portfolio .portfolio-item-others .portfolio-item-vendomo-crm .portfolio-item-notebook-davide, #portfolio .portfolio-item-vendomo-crm .portfolio-item-others .portfolio-item-notebook-milena, #portfolio .portfolio-item-others .portfolio-item-vendomo-crm .portfolio-item-notebook-milena, #portfolio .portfolio-item-vendomo-crm .portfolio-item-others .portfolio-item-notebook-pandora, #portfolio .portfolio-item-others .portfolio-item-vendomo-crm .portfolio-item-notebook-pandora, #portfolio .portfolio-item-vendomo-crm .portfolio-item-others .portfolio-item-notebook-acqua, #portfolio .portfolio-item-others .portfolio-item-vendomo-crm .portfolio-item-notebook-acqua {
-    top: 44.6%;
+    top: 45.2%;
     left: 49%; }
   #portfolio .portfolio-item-vendomo-crm .portfolio-item-mobile {
-    top: 55.2%;
-    left: 13%; }
+    top: 54.6%;
+    left: 11.7%; }
   #portfolio .portfolio-item-vendomo-crm .portfolio-item-title-wrapper {
     left: 66%;
     top: 10.5%; }
@@ -5618,7 +5605,7 @@ h3, .h3 {
     top: 48.6%;
     left: 3%; }
   #portfolio .portfolio-item-foodora .portfolio-item-mobile {
-    top: 55.2%;
+    top: 55.7%;
     left: 62.8%; }
   #portfolio .portfolio-item-foodora .portfolio-item-title-wrapper {
     left: 5%;
@@ -5804,14 +5791,14 @@ h3, .h3 {
 
 #experience {
   flex-direction: column;
-  font-size: 1.6rem;
+  font-size: 1.5rem;
   padding-bottom: 80px; }
   #experience .section-header-img-wrapper {
     width: 90%;
     max-width: 300px; }
   #experience .section-header {
     position: absolute;
-    top: 16vh;
+    top: calc(50vh - 360px);
     left: 0; }
   #experience .section-header-img {
     position: relative;
@@ -5821,7 +5808,7 @@ h3, .h3 {
   #experience.scrolled-this .section-header {
     position: absolute;
     top: auto;
-    bottom: 24vh; }
+    bottom: calc(50vh - 360px); }
   #experience .article-body {
     width: 75%;
     margin-left: 25%;
@@ -5869,11 +5856,11 @@ h3, .h3 {
     padding-bottom: 20px; }
   #experience .experience-employer-name {
     font-size: 2.2rem;
-    letter-spacing: -1px;
-    margin-bottom: 0.5rem; }
+    margin-bottom: 0.5rem;
+    font-family: "worksans-thin", sans-serif; }
   #experience .experience-position {
     font-family: "worksans-regular", sans-serif;
-    font-size: 3rem;
+    font-size: 2.7rem;
     letter-spacing: -0.2rem;
     margin-bottom: 0.5rem; }
   #experience .experience-period {
@@ -5881,7 +5868,7 @@ h3, .h3 {
     font-size: 2.2rem; }
   #experience .experience-subtitle {
     font-family: "worksans-light", sans-serif;
-    font-size: 1.6rem;
+    font-size: 1.5rem;
     margin-bottom: 0.5rem;
     margin-top: 2.5rem; }
 
@@ -5902,7 +5889,7 @@ h3, .h3 {
     position: relative; }
   #references .reference-wrapper {
     width: 28%;
-    font-size: 1.6rem; }
+    font-size: 1.5rem; }
   #references .references-title {
     margin-bottom: 6rem;
     font-family: "worksans-regular", sans-serif;
@@ -5921,7 +5908,9 @@ h3, .h3 {
     margin-bottom: 0;
     position: relative; }
   #references .quote-open {
-    vertical-align: baseline; }
+    vertical-align: baseline;
+    position: relative;
+    top: 2px; }
   #references .quote-close {
     vertical-align: text-top;
     position: relative;
@@ -5942,24 +5931,20 @@ h3, .h3 {
     padding: 3px 8px;
     background: transparent;
     cursor: pointer;
-    font-size: 1.2rem;
-    text-transform: uppercase;
-    color: #8c8c8c;
+    font-size: 1.5rem;
+    letter-spacing: -0.1rem;
+    font-family: "worksans-regular", sans-serif;
+    text-decoration: underline;
     clear: both;
     display: block;
     margin-top: 4rem; }
-    #references .references-linkedin-link:after {
-      content: ' >';
-      position: relative;
-      color: #8c8c8c; }
-    #references .references-linkedin-link:hover, #references .references-linkedin-link.hover, #references .references-linkedin-link:focus, #references .references-linkedin-link.focus, #references .references-linkedin-link:active, #references .references-linkedin-link.active, #references .references-linkedin-link:active {
-      color: #000;
-      text-decoration: underline;
-      outline: 0; }
+    #references .references-linkedin-link:hover, #references .references-linkedin-link:focus, #references .references-linkedin-link:active {
+      color: #8c8c8c;
+      text-decoration: underline; }
 
 #about {
   flex-direction: column;
-  font-size: 1.6rem;
+  font-size: 1.5rem;
   padding-bottom: 80px;
   margin-top: 120px; }
   #about .section-header-img-wrapper {
@@ -5967,21 +5952,20 @@ h3, .h3 {
     max-width: 190px; }
   #about .section-header {
     position: absolute;
-    top: 16vh;
+    top: calc(50vh - 332px);
     left: 0; }
   #about.scrolling-this .section-header {
     position: fixed; }
   #about.scrolled-this .section-header {
     position: absolute;
     top: auto;
-    bottom: 24vh; }
+    bottom: calc(50vh - 332px); }
   #about .article-body {
     width: 75%;
     margin-left: 25%;
     align-items: stretch;
     justify-content: flex-start;
-    padding-right: 20%;
-    padding-left: 5%;
+    padding-right: 26%;
     flex-direction: column; }
   #about .article-content-wrapper {
     width: 75%;
@@ -6011,19 +5995,15 @@ h3, .h3 {
     padding: 3px 8px;
     background: transparent;
     cursor: pointer;
-    font-size: 1.2rem;
-    text-transform: uppercase;
-    color: #8c8c8c; }
-    #about .interest-button:after {
-      content: ' >';
-      position: relative;
-      color: #8c8c8c; }
-    #about .interest-button:hover, #about .interest-button.hover, #about .interest-button:focus, #about .interest-button.focus, #about .interest-button:active, #about .interest-button.active, #about .interest-button:active {
-      color: #000;
-      text-decoration: underline;
-      outline: 0; }
+    font-size: 1.5rem;
+    letter-spacing: -0.1rem;
+    font-family: "worksans-regular", sans-serif;
+    text-decoration: underline; }
+    #about .interest-button:hover, #about .interest-button:focus, #about .interest-button:active {
+      color: #8c8c8c;
+      text-decoration: underline; }
   #about .about-intro {
-    font-size: 1.8rem;
+    font-size: 1.6rem;
     margin-bottom: 4rem;
     text-align: center;
     width: 100%; }
@@ -6031,7 +6011,7 @@ h3, .h3 {
     font-size: 2.4rem;
     font-family: "worksans-thin", sans-serif; }
   #about .about-interest-title-main {
-    font-size: 3.8rem;
+    font-size: 3.6rem;
     font-family: "worksans-thin", sans-serif;
     width: 100%;
     text-align: center;
@@ -6051,7 +6031,8 @@ h3, .h3 {
 
 #contact {
   padding-right: 5%;
-  align-items: center; }
+  align-items: center;
+  min-height: 70vh; }
   #contact .section-header {
     width: 25%;
     position: relative; }
@@ -6059,10 +6040,11 @@ h3, .h3 {
       width: 77%;
       max-width: 350px; }
   #contact .article-body {
-    font-size: 1.8rem;
+    font-size: 1.5rem;
     height: 85%;
     flex-direction: column;
-    text-align: center; }
+    text-align: center;
+    padding-right: 26%; }
   #contact .article-content-wrapper {
     width: 75%;
     overflow-y: scroll;
@@ -6077,13 +6059,24 @@ h3, .h3 {
     font-size: 3.6rem;
     margin: 2rem 0; }
   #contact .contact-methods {
+    border: 0;
+    padding: 3px 8px;
+    background: transparent;
+    cursor: pointer;
+    font-size: 1.5rem;
+    letter-spacing: -0.1rem;
+    font-family: "worksans-regular", sans-serif;
+    text-decoration: underline;
     display: flex;
     justify-content: center; }
+    #contact .contact-methods:hover, #contact .contact-methods:focus, #contact .contact-methods:active {
+      color: #8c8c8c;
+      text-decoration: underline; }
   #contact .contact-method {
     border-radius: 50%;
     width: 22rem;
     height: 22rem;
-    margin: 3rem 1rem;
+    margin: 2rem 1rem;
     display: flex;
     justify-content: center;
     align-items: center;
