--- a/src/scss/sections/_about.scss
+++ b/src/scss/sections/_about.scss
@@ -5,7 +5,7 @@
 #about {
   @extend %article-wrapper;
   flex-direction: column;
-  font-size: 1.6rem;
+  font-size: 1.5rem;
   padding-bottom: 80px;
   margin-top: 120px;
 
@@ -16,7 +16,7 @@
 
   & .section-header {
     position: absolute;
-    top: 16vh;
+    top: calc(50vh - 332px);
     left: 0;
   }
 
@@ -27,7 +27,7 @@
   &.scrolled-this .section-header {
     position: absolute;
     top: auto;
-    bottom: 24vh;
+    bottom: calc(50vh - 332px);
   }
 
   & .article-body {
@@ -35,8 +35,7 @@
     margin-left: 25%;
     align-items: stretch;
     justify-content: flex-start;
-    padding-right: 20%;
-    padding-left: 5%;
+    padding-right: 26%;
     flex-direction: column;
   }
 
@@ -87,7 +86,7 @@
   }
 
   & .about-intro {
-    font-size: 1.8rem;
+    font-size: 1.6rem;
     margin-bottom: 4rem;
     text-align: center;
     width: 100%;
@@ -99,7 +98,7 @@
   }
 
   & .about-interest-title-main {
-    font-size: 3.8rem;
+    font-size: 3.6rem;
     font-family: $font-family-work-sans-thin;
     width: 100%;
     text-align: center;
