--- a/src/scss/sections/_experience.scss
+++ b/src/scss/sections/_experience.scss
@@ -4,7 +4,7 @@
 #experience {
   @extend %article-wrapper;
   flex-direction: column;
-  font-size: 1.6rem;
+  font-size: 1.5rem;
   padding-bottom: 80px;
 
   & .section-header-img-wrapper {
@@ -14,7 +14,7 @@
 
   & .section-header {
     position: absolute;
-    top: 16vh;
+    top: calc(50vh - 360px);
     left: 0;
   }
 
@@ -30,7 +30,7 @@
   &.scrolled-this .section-header {
     position: absolute;
     top: auto;
-    bottom: 24vh;
+    bottom: calc(50vh - 360px);
   }
 
   & .article-body {
@@ -105,13 +105,13 @@
 
   & .experience-employer-name {
     font-size: 2.2rem;
-    letter-spacing: -1px;
     margin-bottom: 0.5rem;
+    font-family: $font-family-work-sans-thin;
   }
 
   & .experience-position {
     font-family: $font-family-work-sans-regular;
-    font-size: 3rem;
+    font-size: 2.7rem;
     letter-spacing: -0.2rem;
     margin-bottom: 0.5rem;
   }
@@ -123,7 +123,7 @@
 
   & .experience-subtitle {
     font-family: $font-family-work-sans-light;
-    font-size: 1.6rem;
+    font-size: 1.5rem;
     margin-bottom: 0.5rem;
     margin-top: 2.5rem;
   }
