--- a/src/scss/sections/_portfolio.scss
+++ b/src/scss/sections/_portfolio.scss
@@ -18,9 +18,8 @@
 
   & .section-header {
     position: absolute;
-    top: 50vh;
+    top: calc(50vh - 273px);
     left: 0;
-    transform: translateY(-50%);
   }
 
   &.portfolio-item--open .section-header {
@@ -34,8 +33,7 @@
   &.scrolled-this .section-header {
     position: absolute;
     top: auto;
-    bottom: 50vh;
-    transform: translateY(50%);
+    bottom: calc(50vh - 273px);
   }
 
   & .article-body {
@@ -114,7 +112,7 @@
 
   .portfolio-item-subtitle-employer {
     //font-family: $font-family-work-sans-light;
-    font-size: 1.6rem;
+    font-size: 1.5rem;
     margin: 2rem 0 0;
   }
 
@@ -122,7 +120,7 @@
   .portfolio-item-content-employer,
   .portfolio-item-content-contribution {
     margin: 0;
-    font-size: 1.6rem;
+    font-size: 1.5rem;
     //font-family: $font-family-work-sans-thin;
     line-height: 1.3;
   }
@@ -130,7 +128,7 @@
   .portfolio-item-subtitle-contribution {
     margin: 1rem 0 0;
     //font-family: $font-family-work-sans-light;
-    font-size: 1.6rem;
+    font-size: 1.5rem;
   }
 
   .portfolio-item-title-wrapper-horizontal {
@@ -178,7 +176,7 @@
   }
 
   .project-type-label {
-    font-size: 1.6rem;
+    font-size: 1.5rem;
     position: absolute;
     top: -2.4rem;
     left: 4.2%;
@@ -404,13 +402,13 @@
     }
 
     & .portfolio-item-notebook {
-      top: 44.6%;
+      top: 45.2%;
       left: 49%;
     }
 
     & .portfolio-item-mobile {
-      top: 55.2%;
-      left: 13%;
+      top: 54.6%;
+      left: 11.7%;
     }
 
     & .portfolio-item-title-wrapper {
@@ -445,7 +443,7 @@
     }
 
     & .portfolio-item-mobile {
-      top: 55.2%;
+      top: 55.7%;
       left: 62.8%;
     }
 
