--- a/src/scss/sections/_skills.scss
+++ b/src/scss/sections/_skills.scss
@@ -4,6 +4,7 @@
 
 #skills {
   @extend %article-wrapper;
+  min-height: 80vh;
   //background: linear-gradient(to right, rgba(255,255,255,0.8) 0%,rgba(255,255,255,0.7) 100%); ;
 
   & .section-header {
