--- a/src/scss/sections/_common.scss
+++ b/src/scss/sections/_common.scss
@@ -397,26 +397,27 @@ h3, .h3 {
   display: block !important;
 }
 .tse-scrollbar .drag-handle {
+  cursor: pointer;
   position: absolute;
   right: 2px;
   -webkit-border-radius: 7px;
   -moz-border-radius: 7px;
   border-radius: 7px;
   min-height: 10px;
-  width: 7px;
+  width: 12px;
   opacity: 0;
   -webkit-transition: opacity 0.2s linear;
   -moz-transition: opacity 0.2s linear;
   -o-transition: opacity 0.2s linear;
   -ms-transition: opacity 0.2s linear;
   transition: opacity 0.2s linear;
-  background: #000;
+  background: #666;
   -webkit-background-clip: padding-box;
   -moz-background-clip: padding;
 }
 .tse-scrollbar:hover .drag-handle {
   /* When hovered, remove all transitions from drag handle */
-  opacity: 0.5;
+  opacity: 0.65;
   -webkit-transition: opacity 0 linear;
   -moz-transition: opacity 0 linear;
   -o-transition: opacity 0 linear;
@@ -424,7 +425,7 @@ h3, .h3 {
   transition: opacity 0 linear;
 }
 .tse-scrollbar .drag-handle.visible {
-  opacity: 0.5;
+  opacity: 0.65;
 }
 /* Used when testing the scrollbar width */
 /* No longer using ::scrollbar too, since it breaks Chrome 25 */
